--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "startup-tycoon",
   "version": "1.0.0",
   "description": "A startup tycoon game",
+  "homepage": "https://prrranavv.github.io/startup-tycoon",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1"
   },
   "browserslist": {
@@ -26,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
